--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header id="header">
-    <a class="logo">Front End</a>
+    <a class="logo">Skills Front</a>
     <ul>
       <li><a href="#habilidades">Conhecimentos</a></li>
       <li><a href="#sobre">Conheça-me</a></li>
@@ -125,7 +125,7 @@
               <label>Mensagem <textarea class="textarea" name="message" required></textarea></label>
             </p>
             <p>
-              <button type="submit">Send</button>
+              <button type="submit" class="botao-ct bt2">Send</button>
             </p>
           </form>
         </div>
